src/styl/layout.styl
*
	margin 0
	padding 0
	vertical-align top
	text-align left
	box-sizing border-box
	-moz-box-sizing border-box
	-webkit-box-sizing border-box

.tile
	display inline-block

.stack
	display block

.table
	display table
	width 100%

.table-row
	display table-row

.table-cell
	display table-cell

.tile-top
	vertical-align top

.tile-middle
	vertical-align middle

.tile-bottom
	vertical-align bottom

.tiles-left
	text-align left

.tiles-middle
	text-align center

.tiles-right
	text-align right

.tiles-justify
	text-align justify
	font-size 0
	line-height normal
	&:after
		display inline-block
		content ""
		width 100%
	& > .tile
		font-size font-size
		line-height line-height

.h-align-middle {
	margin-left: auto;
	margin-right: auto;
}

